<!-- res/layout/bottom_sheet_more_options.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/more_sheet_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Selección múltiple -->
    <LinearLayout
        style="@style/FM_ZeroA.MenuItem"
        android:id="@+id/optMultiSelect">

        <ImageView
            style="@style/FM_ZeroA.MenuIcon"
            android:src="@drawable/ic_list_view"/>

        <TextView
            style="@style/FM_ZeroA.MenuText"
            android:text="@string/menu_multi_select"/>
    </LinearLayout>

    <!-- Divider -->
    <View style="@style/FM_ZeroA.MenuDivider"/>

    <!-- Crear elemento -->
    <LinearLayout
        style="@style/FM_ZeroA.MenuItem"
        android:id="@+id/optCreate">

        <ImageView
            style="@style/FM_ZeroA.MenuIcon"
            android:src="@drawable/ic_create"/>

        <TextView
            style="@style/FM_ZeroA.MenuText"
            android:text="@string/menu_create"/>
    </LinearLayout>

    <View style="@style/FM_ZeroA.MenuDivider"/>

    <!-- Configuración -->
    <LinearLayout
        style="@style/FM_ZeroA.MenuItem"
        android:id="@+id/optSettings">

        <ImageView
            style="@style/FM_ZeroA.MenuIcon"
            android:src="@drawable/ic_settings"/>

        <TextView
            style="@style/FM_ZeroA.MenuText"
            android:text="@string/menu_settings"/>
    </LinearLayout>

    <View style="@style/FM_ZeroA.MenuDivider"/>

    <!-- Acerca de -->
    <LinearLayout
        style="@style/FM_ZeroA.MenuItem"
        android:id="@+id/optAbout">

        <ImageView
            style="@style/FM_ZeroA.MenuIcon"
            android:src="@drawable/ic_info"/>

        <TextView
            style="@style/FM_ZeroA.MenuText"
            android:text="@string/menu_about"/>
    </LinearLayout>

    <View style="@style/FM_ZeroA.MenuDivider"/>

    <!-- Salir -->
    <LinearLayout
        style="@style/FM_ZeroA.MenuItem"
        android:id="@+id/optExit">

        <ImageView
            style="@style/FM_ZeroA.MenuIcon"
            android:src="@drawable/ic_exit"/>

        <TextView
            style="@style/FM_ZeroA.MenuText"
            android:text="@string/menu_exit"/>
    </LinearLayout>

</LinearLayout>
